@startuml BalloonStateの状態遷移図
title BalloonStateの状態遷移図


[*] --> BalloonStatePreparing
BalloonStatePreparing --> BalloonStateReady : Timeout in 0.5~1.5[s]
BalloonStateReady --> BalloonStatePopping : onStamp
BalloonStatePopping --> BalloonStatePreparing : Timeout in 0.5[s]
BalloonStateReady --> BalloonStateAway : Timeout in 1[s]
BalloonStateAway --> BalloonStatePreparing : Timeout in 1[s]


@enduml

